# ots-nuke

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  gunicorn_runner.py  main.py  pyproject.toml  ruff.toml
nginx/: nginx.conf
ots_nuke/: __main__.py  __version__.py  application.py  lifespan.py  log.py
ots_nuke/api/: router.py
ots_nuke/api/health_check/: schemas.py  views.py
ots_nuke/api/pages/: views.py
ots_nuke/api/secrets/: schemas.py  service.py  views.py
ots_nuke/core/: enums.py  schemas.py
ots_nuke/providers/db/: deps.py  lifespan.py
ots_nuke/providers/db/dao/: base.py  secret_dao.py
ots_nuke/providers/db/migrations/: env.py
ots_nuke/providers/db/migrations/versions/: 2026-06-29-19-37_8c4fad2b4944.py
ots_nuke/providers/db/models/: __init__.py  base.py  secret_model.py
ots_nuke/settings/: db.py  server.py  settings.py
ots_nuke/static/css/: style.css  themes.css
ots_nuke/templates/: base.html  created.html  index.html  not_found.html  reveal.html  secret.html
scripts/: entrypoint.sh
tests/: conftest.py  pytest.ini
