[project]
name = "ots-nuke"
version = "0.1.0"
description = ""
authors = [
    {name = "AzatSad",email = "Kalipso979@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
]

[tool.poetry]
packages = [{include = "ots_nuke"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.17,<0.16.0)"
]
tests = [
    "pytest (>=9.1.0,<10.0.0)",
    "faker (>=40.23.0,<41.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-sugar (>=1.1.1,<2.0.0)"
]
